Start of scenery basics

--- a/docs/css/examples.css
+++ b/docs/css/examples.css
@@ -19,7 +19,7 @@
   border: 1px solid red;
 }
 
-.sandbox-example * {
+.sandbox-example .CodeMirror * {
   font-family: "Noto Sans Mono", SFMono-Regular, Consolas, Menlo, monospace;
   font-size: 14px;
 }
